Switch to Junit 5 + AssertJ