@@ -1,8 +1,7 @@
 package uk.co.bconline.ndelius.controller;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
@@ -10,7 +9,6 @@ import org.springframework.ldap.core.LdapTemplate;
 import org.springframework.ldap.query.SearchScope;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
@@ -31,9 +29,8 @@ import static java.time.LocalDateTime.now;
 import static java.time.temporal.ChronoUnit.SECONDS;
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
-import static org.hamcrest.MatcherAssert.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.assertNull;
 import static org.springframework.ldap.query.LdapQueryBuilder.query;
 import static org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers.springSecurity;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -48,7 +45,6 @@ import static uk.co.bconline.ndelius.test.util.UserUtils.nextTestUsername;
 @SpringBootTest
 @DirtiesContext
 @ActiveProfiles("test")
-@RunWith(SpringRunner.class)
 public class UserControllerCreateTest {
     @Autowired
     private WebApplicationContext context;
@@ -61,7 +57,7 @@ public class UserControllerCreateTest {
 
     private MockMvc mvc;
 
-    @Before
+    @BeforeEach
     public void setup() {
         mvc = MockMvcBuilders
             .webAppContextSetup(context)
@@ -172,8 +168,8 @@ public class UserControllerCreateTest {
                 .is("UserPreferences"),
             (Attributes attrs) -> attrs.get("mostRecentlyViewedOffenders"));
 
-        assertThat(attributes, hasSize(1)); // Expect one user to be returned.
-        assertNull(attributes.get(0)); // Expect no user attributes.
+        assertThat(attributes).hasSize(1);
+        assertThat(attributes.getFirst()).isNull();
 
 //		Optional<UserPreferencesEntry> prefs = preferencesRepository.findOne(query()
 //				.searchScope(SearchScope.ONELEVEL)
